--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kth-node-server",
-  "version": "2.0.3-beta",
+  "version": "3.0.0",
   "description": "Module for initializing an Express server in a Node.js application.",
   "main": "index.js",
   "scripts": {
