--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Module for initializing an Express server in a Node.js application.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/mocha/bin/mocha test/**/test-*.js",
+    "preversion": "standard && npm run test",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -12,6 +14,12 @@
   },
   "dependencies": {
     "express": "^4.13.3"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "dotenv": "2.0.0",
+    "mocha": "^3.2.0",
+    "standard": "7.1.0"
   },
   "author": "",
   "license": "MIT"
