--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
   },
   "devDependencies": {
     "@kth/eslint-config-kth": "^2.0.2",
+    "@kth/log": "^4.0.0",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "husky": "^7.0.4",
-    "kth-node-log": "^3.1.10",
     "mocha": "^9.1.3",
     "pem": "^1.14.4",
     "prettier": "^2.5.1",
